2013-12-24  Vladimir Serbinenko  <phcoder@gmail.com>

	Show SATA device path.

2013-12-24  Vladimir Serbinenko  <phcoder@gmail.com>

	Revert grub-file usage in grub-mkconfig.

2013-12-24  Vladimir Serbinenko  <phcoder@gmail.com>

	Make newly-created files other than grub.cfg world-readable.

2013-12-24  Andrey Borzenkov <arvidjaar@gmail.com>

	* util/grub.d/00_header.in: Improve compatibility with old config.

2013-12-24  Vladimir Serbinenko  <phcoder@gmail.com>

	Make rijndael.c respect aliasing rules.

	Trivial backport of dfb4673da8ee52d95e0a62c9f49ca8599943f22e.

2013-12-24  Vladimir Serbinenko  <phcoder@gmail.com>

	Make grub_util_device_is_mapped_stat available in grub-emu core.

2013-12-24  Vladimir Serbinenko  <phcoder@gmail.com>

	Add -Qn to TARGET_CFLAGS if it's supported.
	Fixes compilation on cygwin.

	Reported by: Andrey Borzenkov.
	Suggested by: Andrey Borzenkov.

2013-12-24  Vladimir Serbinenko  <phcoder@gmail.com>

	Save TARGET_CC version in modinfo.sh.

	Suggested by: Andrey Borzenkov.

2013-12-24  Vladimir Serbinenko  <phcoder@gmail.com>

	Make grub_util_devmapper_part_to_disk and grub_util_find_partition_start
	follow the same algorithm to avoid method mismatch. Don't assume
	DMRAID- UUID to mean full disk but instead check that mapping is linear.

2013-12-24  Vladimir Serbinenko  <phcoder@gmail.com>

	Declare GRUB_EFI_VENDOR_APPLE_GUID.

2013-12-24  Vladimir Serbinenko  <phcoder@gmail.com>

	Dump type and vendor specific data when printing device path.

2013-12-23  Colin Watson  <cjwatson@debian.org>

	Update some documentation to refer to Git rather than Bazaar.

	* docs/grub.texi (Obtaining and Building GRUB): Refer to Git rather
	than Bazaar.
	* po/README: Likewise.  Fix spelling mistake.

2013-12-23  Colin Watson  <cjwatson@ubuntu.com>

	Don't distribute config.h.

	* Makefile.am (platform_HEADERS): Move to ...
	(nodist_platform_HEADERS): ... here.  Fixes gettext_strings_test
	failure when building from a distributed tarball.
